--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon --inspect dist/index.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1"
   },
   "devDependencies": {
