--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   "scripts": {
     "watch": "tsc -w",
-    "dev": "nodemon --inspect dist/index.js"
+    "dev": "nodemon --inspect dist/index.js",
+    "start": "node dist/index.js",
+    "build": "tsc"
   },
   "dependencies": {
     "body-parser": "^1.20.0",
